tests/checker/fail/method_ordering_violation.can
Murmur = String

Shout = String

Greeting = String

Greeting => Shout {
    "HELLO"
}

Greeting => Murmur {
    "hello"
}

Unit => Program {
    "hi" -> Greeting -> Murmur -> Print
    "hi" -> Greeting -> Shout -> Print
}
